Fix styles on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,8 +7,12 @@
 html,
 body,
 #root {
-  height: 100%;
+  height: 100vh;
+  max-height: 100vh;
+  min-height: 100vh;
+  overflow: hidden;
   background-color: #FCE5E5;
+  padding-bottom: 12px;
 }
 
 a {
@@ -34,6 +38,12 @@ code {
   position: absolute;
   right: 0;
   bottom: 0;
-  font-size: 12px;
+  font-size: 8px;
   pointer-events: none;
+  background: #634988;
+  color: white;
+  width: 100%;
+  text-align: right;
+  height: 12px;
+  padding-right: 6px;
 }
